# anysim

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md  main.cpp
.github/: FUNDING.yml
examples/: euler_test_config.json  maxwell_test_config.json  single_source.json
examples/euler_2d/: euler_test_config.json  grid_initializer.py
src/: main.cpp
src/core/: CMakeLists.txt  sources.h
src/core/common/: sources.h
src/core/cpu/: sources_holder.h
src/core/gpu/: coloring.cu  coloring.cuh  fdtd.cu  fdtd_gpu_interface.cpp  fdtd_gpu_interface.h
src/core/include/core/common/: common_defs.h  curl.h  sources.h
src/core/include/core/config/: configuration.h  configuration_node.h
src/core/include/core/cpu/: euler_2d.h  fdtd_2d.h  thread_pool.h
src/core/include/core/gpu/: coloring.cuh  euler_2d.cuh  euler_2d_interface.h  fdtd.cuh  fdtd_gpu_interface.h  reduce.cuh
src/core/include/core/grid/: geometry.h  grid.h
src/core/include/core/pm/: project_manager.h
src/core/include/core/sm/: con_simulation_manager.h  multiprocess.h  result_extractor.h  simulation_manager.h
src/core/include/core/solver/: solver.h  workspace.h
src/core/include/cpp/: common_funcs.h
src/core/src/: grid.cpp
src/core/src/config/: configuration.cpp  configuration_node.cpp
src/core/src/cpu/: thread_pool.cpp
src/core/src/gpu/: coloring.cu  euler_2d.cu  euler_2d_gpu_interface.cpp  fdtd.cu  fdtd_gpu_interface.cpp
src/core/src/grid/: geometry.cpp  grid.cpp
src/core/src/pm/: project_manager.cpp
src/core/src/sm/: con_simulation_manager.cpp  multiprocess.cpp  simulation_manager.cpp
src/core/src/solver/: workspace.cpp
src/cpp/: common_funcs.h
src/gui/: CMakeLists.txt  main_window.cpp  main_window.h  opengl_widget.cpp  opengl_widget.h  render_thread.cpp  render_thread.h
src/gui/include/: axes_grid.h  camera.h  graphics_widget.h  gui_application.h  gui_simulation_manager.h  main_window.h  model_widget.h  opengl_widget.h  python_syntax_highlighter.h  render_thread.h  section_name.h  settings_widget.h  text_renderer.h  tree_item.h  tree_model.h
src/gui/include/settings/: global_parameters_widget.h  source_settings_widget.h
src/gui/resources/: resources.qrc
src/gui/resources/shaders/: axes_grid.frag  axes_grid.vert  map_2d.frag  map_2d.vert  texture.frag  texture.vert
src/gui/resources/styles/: bright_theme.css
src/gui/src/: axes_grid.cpp  camera.cpp  graphics_widget.cpp  gui_application.cpp  gui_simulation_manager.cpp  main_window.cpp  model_widget.cpp  opengl_widget.cpp  python_syntax_highlighter.cpp  render_thread.cpp  section_name.cpp  settings_widget.cpp  text_renderer.cpp  tree_item.cpp  tree_model.cpp
src/gui/src/settings/: global_parameters_widget.cpp  source_settings_widget.cpp
src/io/: CMakeLists.txt  vtk.h
src/io/include/io/: configuration_reader.h
src/io/include/io/con/: con_parser.h
src/io/include/io/hdf5/: hdf5_writer.h
src/io/src/: con_parser.cpp  configuration_reader.cpp  confiuration_reader.cpp  hdf5_writer.cpp
test/: configuration_test.cpp
